--- a/views/Register.html
+++ b/views/Register.html
@@ -79,16 +79,24 @@
 
     <main align = "center" style = "min-height: calc(100vh - 142px - 300px); " >
         
-        <div class = "loginBox" style = "margin-top: 3vw; padding: 20px" >
-            <h2 align = "left">Login Here!</h2>
+        <div class = "loginBox" style = "margin-top: 2vw; margin-bottom: 2vw; padding: 20px" >
+            <h2 align = "left">Register Here!</h2>
             <form>
-                <input type="text" id="username" name="username" placeholder="username" ><br><br>
-                <input type="password" id="password" name="password" placeholder = "password" ><br><br>
+                <input type="text" id="Title" name="Title" placeholder="Title" >
+                <input type="text" id="First name" name="First name" placeholder="First name" >
+                <input type="text" id="Surname" name="Surname" placeholder="Surname" >
+                <input type="text" id="Address" name="Address" placeholder="Address" >
+                <input type="text" id="Town" name="Town" placeholder="Town" >
+                <input type="text" id="County" name="County" placeholder="County" >
+                <input type="text" id="Postcode" name="Postcode" placeholder="Postcode" >
+                <input type="text" id="Telephone" name="Telephone" placeholder="Telephone" >
+                <input type="text" id="Email" name="Email" placeholder="Email" >
+                <input type="text" id="Confirm email" name="Confirm email" placeholder="Confirm email" >
+                <input type="text" id="Date of Birth" name="Date of Birth" placeholder="Date of Birth" ><br><br>
                 <div align = "center">
-                    <input type="submit" value="Login" class = "logInButton">
                     <input type="submit" value="Register" class = "logInButton">
                 </div>
-                <input type="submit" value="Forgot your Login?" class = "logInButton" style ="width: 150px">
+               
             </form>
         </div>
     </main>
