--- a/views/hairTest.html
+++ b/views/hairTest.html
@@ -42,7 +42,7 @@
                     <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>        
                 </nav>
                 <nav class = "navigationButton" >                   
-                    <a class = "linkPlain"href="../views/payingOptions.html" >Hair Test</a>                 
+                    <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>                 
                 </nav>
                 <nav class = "navigationButton">                    
                     <a class = "linkPlain"href="https://bionetics.co.uk/" >Testimonies</a>                    
@@ -54,7 +54,7 @@
                     <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Shop</a>
                 </nav>
                 <nav class = "navigationButton" >                   
-                    <a class = "linkPlain"href="../views/login.html" >Login</a>
+                    <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Login</a>
                 </nav>
                 <nav id = "nav" class = "navigationButton" >                   
                     <button class="openButton" onclick="toggleNav()">☰</button>
@@ -68,18 +68,18 @@
            <div align = "left" id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">×</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>
-                <a class = "sideBarOptions"href="../views/payingOptions.html" >Hair Test</a>
+                <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/" >Testimonies</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/contactus.htm" >Contact us</a>
                 <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Shop</a>
-                <a class = "sideBarOptions"href="../views/login.html" >Login</a>
+                <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Login</a>
           </div>
         </nav>
     </header>
 
     <main align = "center" style = "min-height: calc(100vh - 142px - 300px); " >
         
-        <div class = "loginBox" style = "margin-top: 3vw; padding: 20px" >
+        <div class = "loginBox" style = "margin-top: 8vw; padding: 20px" >
             <h2 align = "left">Login Here!</h2>
             <form>
                 <input type="text" id="username" name="username" placeholder="username" ><br><br>
@@ -88,7 +88,7 @@
                     <input type="submit" value="Login" class = "logInButton">
                     <input type="submit" value="Register" class = "logInButton">
                 </div>
-                <input type="submit" value="Forgot your Login?" class = "logInButton" style ="width: 150px">
+               
             </form>
         </div>
     </main>
