--- a/views/indexV0.2.html
+++ b/views/indexV0.2.html
@@ -41,7 +41,7 @@
                     <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>        
                 </nav>
                 <nav class = "navigationButton" >                   
-                    <a class = "linkPlain"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>                 
+                    <a class = "linkPlain"href="../views/payingOptions.html" >Hair Test</a>                 
                 </nav>
                 <nav class = "navigationButton">                    
                     <a class = "linkPlain"href="https://bionetics.co.uk/" >Testimonies</a>                    
@@ -53,7 +53,7 @@
                     <a class = "linkPlain"href="https://bioneticsnutrition.co.uk/" >Shop</a>
                 </nav>
                 <nav class = "navigationButton" >                   
-                    <a class = "linkPlain"href="../views/login.html" >Log In</a>
+                    <a class = "linkPlain"href="../views/login.html" >Login</a>
                 </nav>
                 <nav id = "nav" class = "navigationButton" >                   
                     <button class="openButton" onclick="toggleNav()">☰</button>
@@ -67,11 +67,11 @@
            <div align = "left" id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">×</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/aboutbionetics.htm" >About</a>
-                <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/application.asp" >Hair Test</a>
+                <a class = "sideBarOptions"href="../views/payingOptions.html" >Hair Test</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/" >Testimonies</a>
                 <a class = "sideBarOptions"href="https://bionetics.co.uk/bionetics/contactus.htm" >Contact us</a>
                 <a class = "sideBarOptions"href="https://bioneticsnutrition.co.uk/" >Shop</a>
-                <a class = "sideBarOptions"href="../views/login.html" >Log In</a>
+                <a class = "sideBarOptions"href="../views/login.html" >Login</a>
           </div>
         </nav>
     </header>
