--- a/views/payingOptions.html
+++ b/views/payingOptions.html
@@ -79,17 +79,11 @@
 
     <main align = "center" style = "min-height: calc(100vh - 142px - 300px); " >
         
-        <div class = "loginBox" style = "margin-top: 3vw; padding: 20px" >
-            <h2 align = "left">Login Here!</h2>
-            <form>
-                <input type="text" id="username" name="username" placeholder="username" ><br><br>
-                <input type="password" id="password" name="password" placeholder = "password" ><br><br>
-                <div align = "center">
-                    <input type="submit" value="Login" class = "logInButton">
-                    <input type="submit" value="Register" class = "logInButton">
-                </div>
-                <input type="submit" value="Forgot your Login?" class = "logInButton" style ="width: 150px">
-            </form>
+        <div class = "loginOptions">
+            <a class = "linkPlain hoverYellow2"href="../views/login.html" >Existing customer</a>
+        </div>
+        <div class = "loginOptions">
+            <a class = "linkPlain hoverYellow2"href="../views/Register.html" >New customer</a>
         </div>
     </main>
 
